daemon: don't abort loading users even if missing shadow entries

Some system accounts, e.g. sshd have no entries in /etc/shadow
because they are created prior to /etc/shadow and have no passwords.

Right now load_entries aborts iterating through /etc/passwd entries
if it fails to find the corresponding /etc/shadow entry, ignoring
all the users behind it, making those users missing from the gdm
login screen user list.

https://bugs.freedesktop.org/show_bug.cgi?id=106904